<resources>
    <string name="app_name">MADE Movie App</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.
    </string>

    <string name="movie">Movies</string>
    <string name="tv_show">TV Show</string>

    <string name="user_score">User Score :</string>
    <string name="release_date">Release Date :</string>
    <string name="overview">Overview</string>
    <string name="top_cast">Top Cast :</string>
    <string name="description">Description</string>
    <string name="change_language">Change Language</string>

    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_favorite">Add to favorite</string>

    <string name="add_movie_to_favorite_success">Add movie to favorite success</string>
    <string name="add_tv_show_to_favorite_success">Add TV Show to favorite success</string>
    <string name="remove_movie_from_favorite_success">Remove movie from favorite success</string>
    <string name="remove_tv_from_favorite_success">Remove TV show from favorite success</string>
    <string name="search">Search</string>
    <string name="search_hint">Search movie or tv show…</string>
    <string name="not_found">Not found</string>

    <string-array name="search_filter_array">
        <item>Film</item>
        <item>Acara TV</item>
    </string-array>

    <string-array name="list_preferences_array">
        <item>Ubah bahasa</item>
    </string-array>

    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO DATA</string>
    <string name="favorite_movie">Favorite Movie</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="false">MovieCatalogueReminder</string>
    <string name="notification_topic_daily" translatable="false">DailyReminder</string>
    <string name="notification_topic_release" translatable="false">ReleaseReminder</string>
    <string name="reminder">Reminder</string>
    <string name="daily_reminder">Daily reminder</string>
    <string name="language">Language</string>
    <string name="release_reminder">Release reminder</string>
    <string name="settings">Settings</string>
    <string name="today_release">Today\'s Release</string>

    <string name="daily_notif_message">Good morning! Don\'t forget to open movie catalogue!</string>
    <string name="release_notif_message">What films are released today? Check it out!</string>

    <string name="toast_reminder_enabled">%1s reminder enabled</string>
    <string name="toast_reminder_disabled">%1s reminder disabled</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
